--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "algorithm problems",
   "main": "index.js",
   "scripts": {
-    "test":"jest"
+    "test": "jest"
   },
   "author": "Evan",
   "license": "MIT",
   "dependencies": {
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "jest-cli": "^25.4.0"
   }
 }
