--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "author": "Evan",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
+    "babel-jest": "^26.6.3",
     "jest": "^24.9.0",
-    "jest-cli": "^25.4.0"
+    "jest-cli": "^25.4.0",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
