--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.20",
     "babel-jest": "^26.6.3",
+    "chalk": "^4.1.0",
     "jest": "^24.9.0",
     "jest-cli": "^25.4.0",
     "ts-jest": "^26.4.4",
