adding golang to algorithms

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
     "compilerOptions": {
+      "baseUrl": "typescript",
+      "paths": {
+        "@algos/*": ["algos/*"],
+        "@tests/*": ["tests/*"]
+      },
       "module": "CommonJS",
       "target": "ES2017",
       "declaration": true,
