further python practice and rearrange folder to make more sense

--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codewars",
+  "name": "typescript",
   "version": "1.0.0",
   "description": "algorithm problems",
   "main": "index.js",
